$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2009-01-07 [D] Changed documentation link in admin menu to localized version if available {GauGau}
2009-01-06 [B] Use the right keyword separator when reading IPTC keyword info {Nibbler}
2009-01-06 [B] Fixed "'Minimum number of votes for a file to appear in the 'top-rated' list' is one step too low" issue (thread ID 57462) {Nibbler}
2009-01-06 [C] Added message styles to core functions (thread ID 57133) {GauGau}
2009-01-06 [B] Fixed output buffering bug in cpgGetRemoteFileByURL's curl code that caused the page_html plugin filter to fail (thread ID 57424) {Nibbler}
2009-01-06 [O] Removed features "custom thumbs" and "allowed extensions" that have not been implemented yet (thread ID 54826) {GauGau}
2009-01-05 [B] Album manager and photo manger bugs fixed {Sameera}
2009-01-05 [M] Internationalized the swfupload's browse button {Abbas}
2009-01-04 [M] Updated version count from cpg1.5.0 to cpg1.5.1 to prepare upcoming alpha release {GauGau}
2009-01-04 [M] Updated header information to reflect new year {GauGau}
2009-01-02 [C] Add lang string for i18n of udb_base.inc {Frantz}
2009-01-02 [B] Fixed keyword_select.php not using keyword_separator setting {Paver}
2009-01-02 [C] Color coded some of the docs for better readability {SaWey}
2008-12-31 [M] Updated bundled PHPMailer to 2.03 {Nibbler}
2008-12-31 [B] Update names associated with pictures and comments when user name is changed {Nibbler}
2008-12-31 [O] Removed the OK button from albmgr. Now the changes are saved on client side on blur {Abbas}