@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2009-01-07 [B] Set default value for $admin_menu in theme engine to allow for error in theme_admin_mode_menu {Paver}
 2009-01-07 [D] Changed documentation link in admin menu to localized version if available {GauGau}
 2009-01-06 [B] Use the right keyword separator when reading IPTC keyword info {Nibbler}
 2009-01-06 [B] Fixed "'Minimum number of votes for a file to appear in the 'top-rated' list' is one step too low" issue (thread ID 57462) {Nibbler}
